--- a/index.html
+++ b/index.html
@@ -9,27 +9,271 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- header -->
-  <header class="header">
-    <div class="container">
 
+
+<!-- <header class="header">
+  <div class="container">
+    <div class="logo">
+      <a href="#">
+        <img src="img/icons/logo.png" alt="">
+      </a>
     </div>
-  </header>
-  <!-- header -->
-  <section class="welcome">
-    <div class="container">
-      <div class="into">
-        <h1>The shortest path to real-life conversations
+    <div class="pull-right">
+      <ul class="nav">
+        <li><a href="">item 1</a></li>
+        <li><a href="">item 2</a></li>
+        <li><a href="">item 3</a></li>
+      </ul>
+    </div>
+  </div>
+</header> -->
+
+<nav class="navbar navbar-fixed-top">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">
+        <img src="img/icons/logo.png" alt="">
+      </a>
+    </div>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown dropdown-lang">
+          <a href="#" class="dropdown-toggle"
+                      data-toggle="dropdown"
+                      role="button" aria-haspopup="true"
+                      aria-expanded="false">
+            <span class="dropdowns-cap">Display language:</span>English <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Espanol</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Italiano</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Portugues</a></li>
+          </ul>
+        </li>
+        <li><a href="#">For Volunteters</a></li>
+        <li><a href="#">Sign in / Sign up</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!-- home intro -->
+<section class="welcome">
+  <div class="container">
+    <div class="offset-1 col-md-10 ">
+      <div class="row welcome-box">
+        <h1 class="welcome-box__text">The shortest path to real-life conversations <br>
 in a new language.</h1>
-        <button class="btn">Start learning now</button>
-      </div>
-      <div class="benefits">
-
+        <button type="button" class="btn btn-default btn-lg btn-gr">Start learning now</button>
       </div>
     </div>
-  </section>
+    <div class="row icon-box">
+      <div class="col-md-4">
+        <div class="icon-box__icon"></div>
+        <h4 class="icon-box__title">Full Language </h4>
+        <p class="icon-box__text">
+          Bite-sized lessons perfect
+          for everyday life, work
+          and travel.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <div class="icon-box__icon"></div>
+        <h4 class="icon-box__title">Corrections from native speakers </h4>
+        <p class="icon-box__text">
+          Learn with 60 Million
+          users worldwide.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <div class="icon-box__icon"></div>
+        <h4 class="icon-box__title">Become a volunteer! </h4>
+        <p class="icon-box__text">
+          Bite-sized lessons perfect
+          for everyday life, work
+          and travel.
+        </p>
+      </div>
+    </div>
+    </div>
+  </div>
+</section><!--/ home intro -->
+
+<!-- about -->
+<section class="about">
+  <div class="box">
+      <div class="row nm">
+        <h1 class="title">Who We Are</h1>
+        <div class="col-md-7">
+          <h5 class="s-title">A Little Brief About Dreamlang</h5>
+          <p class="s-text">
+    Dreamlang is a new platform for learning foreign languages. We obsess over crafting
+    the tools you need to start having practical, everyday conversations. We believe the
+    sooner you begin to speak a new language, the sooner you’ll open yourself up to
+    a world that’s bigger, richer, and more inspiring. We obsess over crafting the tools
+    you need to start having practical, everyday conversations.
+          </p>
+          <button class="btn btn-default btn-lg btn-dream">More</button>
+        </div>
+        <div class="col-md-5">
+          <img class="responsive" src="img/1.png" alt="">
+        </div>
+      </div>
+  </div>
+  <div class="box">
+    <div class="row nm">
+      <h1 class="title">Interactive learning</h1>
+      <div class="col-md-6">
+        <div class="media">
+          <div class="media-left media-middle">
+              <img class="media-object" src="img/icons/www.png" alt="">
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading s-title">Middle aligned media</h4>
+            <p class="s-text">
+              You’ll start speaking right away, and our speech recognition
+technology will get your pronunciation on point.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media">
+          <div class="media-left media-middle">
+              <img class="media-object" src="img/icons/www.png" alt="">
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading s-title">Speak Confidently and Correctly</h4>
+            <p class="s-text">
+              You’ll start speaking right away, and our speech recognition
+technology will get your pronunciation on point.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media">
+          <div class="media-left media-middle">
+              <img class="media-object" src="img/icons/www.png" alt="">
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading s-title">Earn Points</h4>
+            <p class="s-text">
+              You’ll start speaking right away, and our speech recognition
+technology will get your pronunciation on point.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media">
+          <div class="media-left media-middle">
+              <img class="media-object" src="img/icons/www.png" alt="">
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading s-title">Watch Your Progress</h4>
+            <p class="s-text">
+              You’ll start speaking right away, and our speech recognition
+technology will get your pronunciation on point.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="box">
+      <div class="row nm">
+        <h1 class="title">Become a Volunteer</h1>
+        <div class="col-md-7">
+          <h5 class="s-title">A Little Brief About Dreamlang</h5>
+          <p class="s-text">
+    Dreamlang is a new platform for learning foreign languages. We obsess over crafting
+    the tools you need to start having practical, everyday conversations. We believe the
+    sooner you begin to speak a new language, the sooner you’ll open yourself up to
+    a world that’s bigger, richer, and more inspiring. We obsess over crafting the tools
+    you need to start having practical, everyday conversations.
+          </p>
+          <button class="btn btn-default btn-lg btn-dream">More</button>
+        </div>
+        <div class="col-md-5">
+          <img class="responsive" src="img/2.jpg" alt="">
+        </div>
+      </div>
+  </div>
+</section><!--/ about -->
+
+<!-- footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <ul class="social">
+          <li><img src="img/icons/twitter.png" alt=""></li>
+          <li><img src="img/icons/fb.png" alt=""></li>
+          <li><img src="img/icons/vk.png" alt=""></li>
+          <li><img src="img/icons/gp.png" alt=""></li>
+          <li><img src="img/icons/yt.png" alt=""></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 col-xs-6">
+        <h5>Learn Languages Online:</h5>
+        <p>Learn German online</p>
+        <p>Learn French online</p>
+        <p>Learn Italian online</p>
+        <p>Learn Spanish online</p>
+        <p>Learn Portuguese online</p>
+        <p>Learn Turkish online</p>
+        <p>Learn Polish online</p>
+        <p>Learn Dutch online</p>
+      </div>
+      <div class="col-sm-2 col-xs-6">
+        <h5>About us</h5>
+        <p>Our Mission
+        <p>You Can Learn Anything</p>
+        <p>Our Team</p>
+        <p>Our Interns</p>
+        <p>Our Content Specialists</p>
+        <p>Our Board</p>
+      </div>
+      <div class="col-sm-2 col-xs-4">
+        <h5>SUPPORT</h5>
+        <p>Help center</p>
+        <p>Support Community</p>
+
+        <h5>SOCIAL</h5>
+        <p>Share Your Story</p>
+        <p>Press</p>
+      </div>
+      <div class="col-sm-2 col-xs-4">
+        <h5>VOLUNTEER</h5>
+        <p>Full Time</p>
+        <p>Internships</p>
+      </div>
+      <div class="col-sm-2 col-xs-4">
+        <h5>CONTRIBUTE</h5>
+        <p>Donate</p>
+        <p>Volunteer</p>
+        <p>Our Supporters</p>
+      </div>
+    </div>
+  </div>
+</footer><!--/ footer -->
 
 <!-- script -->
+<script src="js/jquery.min.js"></script>
+
+<script src="js/bootstrap.min.js"></script>
+
+
 <script src="js/dreamlang.js"></script>
 </body>
 </html>
