fix icon and bg

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ in a new language.</h1>
     </div>
     <div class="row icon-box">
       <div class="col-md-4 col-xs-12">
-        <div class="icon-box__icon"></div>
+        <div class="icon-box__icon">
+          <img src="img/icons/header1.png" alt="">
+        </div>
         <h5 class="icon-box__title">Full Language Courses</h5>
         <p class="icon-box__text">
           Bite-sized lessons perfect
@@ -66,7 +68,9 @@ in a new language.</h1>
         </p>
       </div>
       <div class="col-md-4 col-xs-12">
-        <div class="icon-box__icon"></div>
+        <div class="icon-box__icon">
+          <img src="img/icons/header2.png" alt="">
+        </div>
         <h5 class="icon-box__title">Corrections from native speakers </h5>
         <p class="icon-box__text">
           Learn with 60 Million
@@ -74,7 +78,9 @@ in a new language.</h1>
         </p>
       </div>
       <div class="col-md-4 col-xs-12">
-        <div class="icon-box__icon"></div>
+        <div class="icon-box__icon">
+          <img src="img/icons/header3.png" alt="">
+        </div>
         <h5 class="icon-box__title">Become a volunteer! </h5>
         <p class="icon-box__text">
           Bite-sized lessons perfect
@@ -114,7 +120,7 @@ in a new language.</h1>
       <div class="col-md-6">
         <div class="media">
           <div class="media-left media-middle">
-              <img class="media-object" src="img/icons/www.png" alt="">
+              <img class="media-object" src="img/icons/content1.png" alt="">
           </div>
           <div class="media-body">
             <h4 class="media-heading s-title">Middle aligned media</h4>
@@ -128,7 +134,7 @@ technology will get your pronunciation on point.
       <div class="col-md-6">
         <div class="media">
           <div class="media-left media-middle">
-              <img class="media-object" src="img/icons/www.png" alt="">
+              <img class="media-object" src="img/icons/content2.png" alt="">
           </div>
           <div class="media-body">
             <h4 class="media-heading s-title">Speak Confidently and Correctly</h4>
@@ -142,7 +148,7 @@ technology will get your pronunciation on point.
       <div class="col-md-6">
         <div class="media">
           <div class="media-left media-middle">
-              <img class="media-object" src="img/icons/www.png" alt="">
+              <img class="media-object" src="img/icons/content3.png" alt="">
           </div>
           <div class="media-body">
             <h4 class="media-heading s-title">Earn Points</h4>
@@ -156,7 +162,7 @@ technology will get your pronunciation on point.
       <div class="col-md-6">
         <div class="media">
           <div class="media-left media-middle">
-              <img class="media-object" src="img/icons/www.png" alt="">
+              <img class="media-object" src="img/icons/content4.png" alt="">
           </div>
           <div class="media-body">
             <h4 class="media-heading s-title">Watch Your Progress</h4>
