focus animation on input

--- a/logIn.html
+++ b/logIn.html
@@ -48,26 +48,18 @@
 <!-- home intro -->
 <section class="welcome">
   <div class="container">
-    <div class="row">
-      <div class="offset-3 col-sm-6">
-        <div class="sign">
-          <img src="img/log.png" alt="" class="sign-cover">
-          <h4 class="sign-title">Login</h4>
-          <form action="" class="logfrom">
-            <input class="logfrom-input" type="email" placeholder="Email" required>
-            <input class="logfrom-input" type="text" placeholder="Login" required>
-            <input class="logfrom-input" type="password" placeholder="Password" required>
-            <button class="btn btn-gr btn-log">Sign in</button>
-            <a href="#" class="logfrom-help logfrom-help__one">Forgot password?</a>
-            <a href="#" class="logfrom-help logfrom-help__two">Create new account</a>
-          </form>
-        </div>
-      </div>
+    <div class="sign">
+      <img src="img/log.png" alt="" class="sign-cover">
+      <h4 class="sign-title">Login</h4>
+      <form action="" class="logfrom">
+        <!-- <input class="logfrom-input" type="email" placeholder="Email" required> -->
+        <input class="logfrom-input" type="text" placeholder="Login" required>
+        <input class="logfrom-input" type="password" placeholder="Password" required>
+        <button class="btn btn-gr btn-log">Sign in</button>
+        <a href="#" class="logfrom-help logfrom-help__one">Forgot password?</a>
+        <a href="#" class="logfrom-help logfrom-help__two">Create new account</a>
+      </form>
     </div>
-
-    <div class="col-sm-4">col 3</div>
-    <div class="col-sm-4">col 3</div>
-    <div class="col-sm-4">col 3</div>
   </div>
   </div>
 </section><!--/ home intro -->
