filtered sass folder, minor fix

--- a/signUp.html
+++ b/signUp.html
@@ -52,10 +52,11 @@
       <img src="img/log.png" alt="" class="sign-cover">
       <h4 class="sign-title">Registration</h4>
       <form action="" class="logfrom">
-        <input class="logfrom-input" type="text" placeholder="Fisrt name" required>
-        <input class="logfrom-input" type="text" placeholder="Last name" required>
-        <input class="logfrom-input" type="email" placeholder="Email" required>
-        <input class="logfrom-input" type="password" placeholder="Password" required>
+        <input name="first-name" class="logfrom-input" type="text" placeholder="Fisrt name" required>
+        <input name="last-name" class="logfrom-input" type="text" placeholder="Last name" required>
+        <input name="email" class="logfrom-input" type="email" placeholder="Email" required>
+        <input name="pass" class="logfrom-input" type="password" placeholder="Password" required>
+        <input name="pass-again" class="logfrom-input" type="password" placeholder="Password" required>
         <div class="form-group">
           <p>The day of your birth "dd/mm/yyyy"</p>
           <select class="lingulus-select lingulus-select-day" name="" id="">
